--- a/python/Django/forms.ipynb
+++ b/python/Django/forms.ipynb
@@ -11,7 +11,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Tworzenie formularza na podstawie modelu"
+    "##### Tworzenie formularza na podstawie modelu ModelForm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tworzymy plik forms.py w tym samym katalogu co plik models.py.\n",
+    "\n",
+    "Importujemy \"forms\" z modułu django oraz modele."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'django'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdjango\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m forms\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'django'"
+     ]
+    }
+   ],
+   "source": [
+    "from django import forms\n",
+    "from .models import * #lub wybrany model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tworzymy klasę formularza"
    ]
   },
   {
@@ -19,6 +57,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class model_nameForm(forms.ModelForm): # model_name to wybrany model (konwencja)\n",
+    "    model = model_name\n",
+    "    fields = [__all__] # lub wybrane pola danego modelu\n",
+    "    labels = {'field_name':'new_name'} # zmiana nazwy wybranego pola (do wyświetlenia w template)\n",
+    "    exclude = [] # wyklucza z formularza wybrane pola modelu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
