--- a/python/Django/forms.ipynb
+++ b/python/Django/forms.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "class model_nameForm(forms.ModelForm): # model_name to wybrany model (konwencja)\n",
     "    model = model_name\n",
-    "    fields = [__all__] # lub wybrane pola danego modelu\n",
+    "    fields = '__all__' # lub wybrane pola danego modelu\n",
     "    labels = {'field_name':'new_name'} # zmiana nazwy wybranego pola (do wyświetlenia w template)\n",
     "    exclude = [] # wyklucza z formularza wybrane pola modelu"
    ]
@@ -56,7 +56,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "####"
+   ]
   }
  ],
  "metadata": {
