--- a/python/Django/Filtrowanie.ipynb
+++ b/python/Django/Filtrowanie.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "91dc7bf6",
-   "metadata": {},
+   "id": "5d3ea9ff",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Django-filter"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "44aa276e",
-   "metadata": {},
+   "id": "47a907dc",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Zainstalować pakiet \"pip install django-filter\"\n",
     "\n",
@@ -24,11 +32,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "719ab931",
-   "metadata": {},
+   "id": "ad4605bc",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "class nameFilter(django_filters.FilterSet):\n",
+    "class NameFilter(django_filters.FilterSet):\n",
     "    class Meta:\n",
     "        model = nazwa_modelu\n",
     "        fields = '__all__' # lub analogicznie jak w Formularzach wybrane pola\n",
@@ -36,12 +48,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b775bcdf",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "W pliku views.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d4f7dca",
-   "metadata": {},
+   "id": "c5016e5f",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def model_view(request):\n",
+    "    my_filter = NameFilter(request.GET, queryset=nazwa_modelu.objects.all())\n",
+    "    filtered_items = my_filter.qs\n",
+    "    \n",
+    "    # dodajemy filtr i filtorwane elementy do context    \n",
+    "    context = {'my_filter': my_filter,\n",
+    "               'filtered_items': filtered_items}\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45818dde",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "W template dodajemy poniższy kod."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a5c3989",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "<form method='get'>\n",
+    "  {{ my_filter.form }} # można tak jak w przypadku formularzy {{ my_filter.form.as_p }}\n",
+    "  <button type='submit'>Search</button>\n",
+    "</form>\n",
+    "\n",
+    "# wyświetlenie wyników\n",
+    "{% for item in filtered_items %}\n",
+    "  {{ item }}\n",
+    "{% endfor %}    "
+   ]
   }
  ],
  "metadata": {
