--- a/python/Django/Filtrowanie.ipynb
+++ b/python/Django/Filtrowanie.ipynb
@@ -49,6 +49,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76737c94",
+   "metadata": {},
+   "source": [
+    "W przypadku kiedy nie chcemy wyświetlać wyników przed filtrowaniem, należy dodać kod jak niżej:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ebf6f75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super(NozzleFilter, self).__init__(*args, **kwargs)\n",
+    "        if self.data == {}:\n",
+    "            self.queryset = self.queryset.none()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b775bcdf",
    "metadata": {
     "pycharm": {
@@ -113,6 +134,14 @@
     "  {{ item }}\n",
     "{% endfor %}    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e93b9a78",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
