--- a/python/Django/forms.ipynb
+++ b/python/Django/forms.ipynb
@@ -85,7 +85,102 @@
     }
    },
    "source": [
-    "####"
+    "W pliku views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#importujemy formularz\n",
+    "from .forms import model_nameForm\n",
+    "\n",
+    "def sample_view(request):\n",
+    "    if request.method != 'POST':\n",
+    "        form = model_nameForm()\n",
+    "    else:\n",
+    "        form = model_nameForm(data=request.POST)\n",
+    "        if form.is_valid():\n",
+    "            form.save()\n",
+    "            return redirect('app_name:view')\n",
+    "\n",
+    "    context = {'form': form}\n",
+    "    template = 'sample.html'\n",
+    "    \n",
+    "    return render(request, template, context)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Edycja wybranego obiektu modelu."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def sample_edit_view(request, object_id):\n",
+    "    obj = Object.objects.get(id=object_id)\n",
+    "    if request.method != 'POST':\n",
+    "        form = model_nameForm(instance=obj)\n",
+    "    else:\n",
+    "        form = model_nameForm(instance=obj, data=request.POST)\n",
+    "        if form.is_valid():\n",
+    "            form.save()\n",
+    "        return redirect('app_name:view')\n",
+    "    \n",
+    "    context = {'form', form}\n",
+    "    template = 'sample.html'\n",
+    "    return render(request, template, context)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Edycja wybranego obiektu modelu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sample_edit_view(request, object_id):\n",
+    "    obj = Object.objects.get(id=object_id)\n",
+    "    if request.method != 'POST':\n",
+    "        form = model_nameForm(instance=obj)\n",
+    "    else:\n",
+    "        form = model_nameForm(instance=obj, data=request.POST)\n",
+    "        if form.is_valid():\n",
+    "            form.save()\n",
+    "        return redirect('app_name:view')\n",
+    "    \n",
+    "    context = {'form', form}\n",
+    "    template = 'sample.html'\n",
+    "    return render(request, template, context)"
    ]
   }
  ],
