--- a/Javascript/js_basics.ipynb
+++ b/Javascript/js_basics.ipynb
@@ -320,6 +320,30 @@
     "    return arr.age > 18 && arr.name === 'Piotr'\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48c8b8f3",
+   "metadata": {},
+   "source": [
+    "### Mapowanie tablicy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86d7475b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const list1 = [1, 2, 3]\n",
+    "\n",
+    "const mappedList = list1.map(function(num) {  ### num jest domyślną nazwą \n",
+    "    return num * 2\n",
+    "}).join(\"\") ## wynikiem będzie string bez przecinków\n",
+    "\n",
+    "# console.log(mappedList) -- > [2, 4, 6] (z join [\"246\"])"
+   ]
   }
  ],
  "metadata": {
