--- a/Javascript/js_basics.ipynb
+++ b/Javascript/js_basics.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48c8b8f3",
+   "id": "98945d7a",
    "metadata": {},
    "source": [
     "### Mapowanie tablicy"
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86d7475b",
+   "id": "8d4c34b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,6 +343,95 @@
     "}).join(\"\") ## wynikiem będzie string bez przecinków\n",
     "\n",
     "# console.log(mappedList) -- > [2, 4, 6] (z join [\"246\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93c8ffdf",
+   "metadata": {},
+   "source": [
+    "### Tworzenie Array i wypełnianie danymi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "246d117d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const newArray = new Array(10).fill(\"data1\") # stworzy nową listę o długości 10 i wypełni ją \"data1\"\n",
+    "\n",
+    "#przykład z mapowaniem\n",
+    "\n",
+    "const newArray = new Array(10).fill(2).map(function(num) {\n",
+    "    return num * 2\n",
+    "})\n",
+    "\n",
+    "# wynikiem będzie lista o długości 10 i wypełniona 2*2 czyli 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07b1c0c0",
+   "metadata": {},
+   "source": [
+    "### Funkcja konstruktora i metody konstruktora"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67620099",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const person1 = {\n",
+    "    name: \"Piotr\"\n",
+    "    lastName = \"Kowalski\"\n",
+    "}\n",
+    "\n",
+    "function Person(data) {  # konstruktor z wielkiej litery\n",
+    "    this.name = data.name\n",
+    "    this.lastName = data.lastName\n",
+    "}\n",
+    "\n",
+    "# uproszczona wersja (konstruktor na podstawie obiektu)\n",
+    "function Person(data) {\n",
+    "    Object.assign(this, data) #Object.assign(target, source)\n",
+    "}\n",
+    "\n",
+    "#utworzenie nowej instancji\n",
+    "const newPerson = new Person(person1)  # utworzy nową instancję na podstawie obiektu person1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "993de743",
+   "metadata": {},
+   "source": [
+    "Metoda konstruktora"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "138f74f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function Person(data) {\n",
+    "    Object.assing(this, data)\n",
+    "    \n",
+    "    this.introduceMyself = function() {\n",
+    "        console.log(`\"Hi my name is ${this.name} ${this.lastName}\"`)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "const newPerson = new Person(person1)\n",
+    "\n",
+    "# wywołanie metody\n",
+    "newPerson.introduceMyself()"
    ]
   }
  ],
