--- a/Javascript/js_basics.ipynb
+++ b/Javascript/js_basics.ipynb
@@ -97,7 +97,10 @@
    "source": [
     "setTimeout(function(){\n",
     "    console.log(\"Wyświetli ten komunikat po określonym czasie w milisekundach\")\n",
-    "}, 3000) # wyświetli komunikat po 3 sekundach"
+    "}, 3000) # wyświetli komunikat po 3 sekundach\n",
+    "\n",
+    "# setTimeout jako arrow function\n",
+    "setTimeout(() => console.log(\"Show me after 3 seconds\", 3000))"
    ]
   },
   {
@@ -432,6 +435,79 @@
     "\n",
     "# wywołanie metody\n",
     "newPerson.introduceMyself()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd7c4ec3",
+   "metadata": {},
+   "source": [
+    "### Funkcja reduce()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a41a5f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const numbers = [1, 3, 14]\n",
+    "\n",
+    "const sumAllNumbers = numbers.reduce(total, currentNumber) => {\n",
+    "    return total + currentNumber  #total i currentNumber to nazwy umowne\n",
+    "}\n",
+    "\n",
+    "console.log(sumAllNumbers) #### zwróci wynik 18"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f0defde",
+   "metadata": {},
+   "source": [
+    "### Ternary operator (Operator trójargumentowy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43590844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const age = 18\n",
+    "\n",
+    "const message = age > 18 ? \"You are allowed to buy alcohol\" # warunek 1\n",
+    "    : age < 18 ? \"You aren't allowed to buy alcohol\"  # warunek 2\n",
+    "    : \"Hooray\" # warunek 3 - jeżeli nie spełnione będą potrzebne to message przyjmie wartość \"Hooray\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed76c823",
+   "metadata": {},
+   "source": [
+    "#### Arrow functions (funkcje strzałkowe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c11d32d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const newFunction = (parametr1, parametr2) => `This is string with ${parametr1} and {parametr 2}`\n",
+    "\n",
+    "# dla jednego parametru nie potrzebujemy nawiasu\n",
+    "const newFunction2 = parametr1 => `This is string with ${parametr1}`\n",
+    "\n",
+    "# bardziej skomplikowana funckja\n",
+    "const newFunction3 = (par1, par2) => {\n",
+    "    const sumTotal = par1, par2\n",
+    "    return sumTotal\n",
+    "}"
    ]
   }
  ],
