--- a/HTML and CSS/When to use which units.ipynb
+++ b/HTML and CSS/When to use which units.ipynb
@@ -29,7 +29,7 @@
    "id": "284fbadf",
    "metadata": {},
    "source": [
-    "Em najlepiej używać dla padding i margin - pozwoli to na lepszą "
+    "Em najlepiej używać dla padding i margin - pozwoli to na lepszą kontrolę."
    ]
   },
   {
