new firebase notes

--- a/Firebase/Firebase basics.ipynb
+++ b/Firebase/Firebase basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ecba6826",
+   "id": "239fbe80",
    "metadata": {},
    "source": [
     "### Instalacja Firebase"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "699c0a69",
+   "id": "738477a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,35 @@
     "## wówczas jeżeli mamy tak skonfigurowaną bazę to możemy np po kliknięciu dodać nowy rekord\n",
     "function handleClick() {\n",
     "    push(itemsInDB, formData)  # formData to np wartość z pola input.\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a664cac",
+   "metadata": {},
+   "source": [
+    "### Pobieranie danych"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f30ffbef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## do importu firebase/databse dodajemy onValue\n",
+    "import {..., onValue} from \"firebase/database\"\n",
     "\n",
-    "\n"
+    "onValue(itemsInDB, function(snapshot) { ##najpierw podajemy w parametrach bazę danych, a następnie funkcję z parametrem snapshot\n",
+    "    ## snapshot jest listą obiektów (entries) składającą sie z key, value, ale\n",
+    "    ## aby uzyskać do nich dostęp to musimy przykładowo zrobić jak niżej\n",
+    "    let itemsArray = Object.entries(snapshot.val().map(item => { ## ważny jest snapshot.val()\n",
+    "        console.log(\"key\", item[0])\n",
+    "        console.log(\"value\", item[1])\n",
+    "    }))\n",
+    "})"
    ]
   }
  ],
