new firebase notes

--- a/Firebase/Firebase basics.ipynb
+++ b/Firebase/Firebase basics.ipynb
@@ -31,7 +31,7 @@
     "## pod poniższym kodem dopisujemy\n",
     "const app = initializeApp(firebaseConfig)\n",
     "const database = getDatbase(app)\n",
-    "const itemsInDB = ref(database, \"items\") # <-- items to nazwa kolumny do której będziemy dodawać nowe wartości\n",
+    "const itemsInDB = ref(database, \"someItems\") # <-- items to nazwa kolumny do której będziemy dodawać nowe wartości\n",
     "\n",
     "## wówczas jeżeli mamy tak skonfigurowaną bazę to możemy np po kliknięciu dodać nowy rekord\n",
     "function handleClick() {\n",
@@ -61,10 +61,35 @@
     "    ## snapshot jest listą obiektów (entries) składającą sie z key, value, ale\n",
     "    ## aby uzyskać do nich dostęp to musimy przykładowo zrobić jak niżej\n",
     "    let itemsArray = Object.entries(snapshot.val().map(item => { ## ważny jest snapshot.val()\n",
-    "        console.log(\"key\", item[0])\n",
-    "        console.log(\"value\", item[1])\n",
+    "        console.log(\"key\", item[0]) ## key to będzie wygenerowany przez firebase id\n",
+    "        console.log(\"value\", item[1]) ## value to będzie dana z bazy\n",
     "    }))\n",
+    "})\n",
+    "\n",
+    "## aby sprawdzić czy są jakieś wpisy można użyć funkcji\n",
+    "if (snapshot.exists() {\n",
+    "    # do something\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "927122ad",
+   "metadata": {},
+   "source": [
+    "### Usuwanie danych"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef51e36f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## importujemy remove z \"firebase/database\" i przypisujemy do zmiennej\n",
+    "let itemToDelete = ref(database, `someItems/${id}`) ## id wpisu który chcemy usunąć\n",
+    "remove(itemToDelete)"
    ]
   }
  ],
