updated react-redux notes

--- a/React/React-redux.ipynb
+++ b/React/React-redux.ipynb
@@ -21,10 +21,155 @@
   },
   {
    "cell_type": "markdown",
+   "id": "572f6ad4",
+   "metadata": {},
+   "source": [
+    "Tworzymy katalog features (taka konwencja? gdzie indziej był katalog redux), a w katalogu umieszczamy plik z nazwą reducer-a."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42bfc34c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## plik user.jsx\n",
+    "\n",
+    "## importujemy createSlice\n",
+    "import { createSlice } from '@reduxjs/toolkig'\n",
+    "\n",
+    "## tworzymy slice-a, do którego musimy przekazać argumenty jak niżej\n",
+    "export const userSlice = createSlice({\n",
+    "    name: \"user\",  # nie wiem gdzie można póżniej użyć tej nazwy :(\n",
+    "    initialState: {value: {name: \"\", age: 0, email: \"\"}},\n",
+    "    reducers: {\n",
+    "        # akcje, które modyfikują state\n",
+    "        login: (state, action) => {         # login to nazwa akcji, można nazwać np setNewLogin, incrementCounter itp.\n",
+    "            state.value = action.payload\n",
+    "        }\n",
+    "    }\n",
+    "})\n",
+    "\n",
+    "## exportujemy akcję login\n",
+    "export const { login } = userSlice.actions\n",
+    "\n",
+    "## exportujemy userSlice reducer\n",
+    "export default userSlice.reducer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4378de0",
+   "metadata": {},
+   "source": [
+    "W pliku main.jsx (lub index.jsx) całej aplikacji."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cab65877",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importujemy Provider-a\n",
+    "import { Provider } from 'react-redux'\n",
+    "\n",
+    "# importujemy userReducer z user.jsx (jako, że jest exportowany jako default, to możemy importować wg własnej nazwy, czyli \n",
+    "# userReducer)\n",
+    "\n",
+    "import userReducer from './features/user.jsx'\n",
+    "\n",
+    "# importujemy configureStore\n",
+    "import { configureStore } from '@reduxjs/toolkit'\n",
+    "\n",
+    "# tworzymy store\n",
+    "const store = configureStore({\n",
+    "    user: userReducer          # user to nazwa własna, będzie wykorzystana w odczytaniu wartości state\n",
+    "    other: otherReducer        # możemy przygotować sobie innne slice-y do kontrolowania inneg zbioru state\n",
+    "})\n",
+    "\n",
+    "# wrapujemy aplikację Providerem\n",
+    "\n",
+    "ReactDOM.createRoot(document.getElementById('root')).render(\n",
+    "  <React.StrictMode>\n",
+    "    <Provider store={store}>   # store musi być zawsze przekazany\n",
+    "      <App />\n",
+    "    </Provider>\n",
+    "  </React.StrictMode>,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "affe96bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## tworzymy przykładowy komponent Login.jsx, a w nim\n",
+    "\n",
+    "# importujemy useDispatch\n",
+    "import { useDispatch } from 'react-redux'\n",
+    "\n",
+    "# importujemy actions ze slice-a\n",
+    "import { login } from '../featuers/user'\n",
+    "\n",
+    "# tworzymy komponent\n",
+    "function Login() {\n",
+    "    \n",
+    "    const dispatch = useDispatch() # tworzymy funkcję dispatch przy pomocy hooka useDispatch\n",
+    "    \n",
+    "    return {\n",
+    "        <div>\n",
+    "            <button onClick={() => {  # dla eventu przypisujemy funkcję dispatch, \n",
+    "                                      # która jako argument dostaje akcję (w tym przypadku login)\n",
+    "                dispatch(login({\n",
+    "                    name: \"newName\",\n",
+    "                    email: \"newEmail\",\n",
+    "                    age: 30,\n",
+    "                }))\n",
+    "            }}>Login</button>\n",
+    "        </div>\n",
+    "    }\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fb50cea1",
    "metadata": {},
    "source": [
-    "W pliku main.jsx (lub index.jsx) aplikacji importujemy Provider-a, a następnie komponent app opakowujemy w Provider-a."
+    "### Sposób nr 2 W pliku main.jsx (lub index.jsx) aplikacji importujemy Provider-a, a następnie komponent app opakowujemy w Provider-a."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0f9884e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## tworzymy np. nowy komponent np. Profile.jsx gdzie chcemy wyświetlić dane usera\n",
+    "\n",
+    "# importujemy useSelector\n",
+    "import { useSelector } from 'react-redux'\n",
+    "\n",
+    "function Profile() {\n",
+    "    \n",
+    "    const user = useSelector( state => state.user.value) # odnosimy się do user z punktu wyżej, \n",
+    "    \n",
+    "    return (\n",
+    "    <div>\n",
+    "        <h1>Profile page</h1>\n",
+    "        <p>Name: {user.name}</p>\n",
+    "        <p>Age: {user.age}</p>\n",
+    "        <p>Email: {user.email}<p>\n",
+    "    </div>\n",
+    "    )\n",
+    "}\n"
    ]
   },
   {
