added java notes

--- a/Java/compareTo implementation.ipynb
+++ b/Java/compareTo implementation.ipynb
@@ -140,6 +140,80 @@
     "           .sorted(Comparator.reverseOrder()) # we change sorting \"direction\" with Comparator.reverseOrder()\n",
     "           .forEach(member -> System.out.println(member))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7d970c4",
+   "metadata": {},
+   "source": [
+    "## UWAGA: Możemy nie implementować interfejsu Comparable!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dfca0aa",
+   "metadata": {},
+   "source": [
+    "Możemy zastosować funkcję lambda w kodzie jak niżej."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a986e90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class Person {\n",
+    "\n",
+    "    private String name;\n",
+    "    private int birthYear;\n",
+    "\n",
+    "    public Person(String name, int birthYear) {\n",
+    "        this.name = name;\n",
+    "        this.birthYear = birthYear;\n",
+    "    }\n",
+    "\n",
+    "    public String getName() {\n",
+    "        return name;\n",
+    "    }\n",
+    "\n",
+    "    public int getBirthYear() {\n",
+    "        return birthYear;\n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        ArrayList<Person> persons = new ArrayList<>();\n",
+    "        persons.add(new Person(\"Ada Lovelace\", 1815));\n",
+    "        persons.add(new Person(\"Irma Wyman\", 1928));\n",
+    "        persons.add(new Person(\"Grace Hopper\", 1906));\n",
+    "        persons.add(new Person(\"Mary Coombs\", 1929));\n",
+    "        \n",
+    "        ArrayList<Person> persons = new ArrayList<>();\n",
+    "        persons.add(new Person(\"Ada Lovelace\", 1815));\n",
+    "        persons.add(new Person(\"Irma Wyman\", 1928));\n",
+    "        persons.add(new Person(\"Grace Hopper\", 1906));\n",
+    "        persons.add(new Person(\"Mary Coombs\", 1929));\n",
+    "\n",
+    "        persons.stream().sorted((p1, p2) -> {\n",
+    "            return p1.getBirthYear() - p2.getBirthYear();\n",
+    "        }).forEach(p -> System.out.println(p.getName()));\n",
+    "\n",
+    "        System.out.println();\n",
+    "\n",
+    "        persons.stream().forEach(p -> System.out.println(p.getName()));\n",
+    "\n",
+    "        System.out.println();\n",
+    "\n",
+    "        Collections.sort(persons, (p1, p2) -> p1.getBirthYear() - p2.getBirthYear());\n",
+    "\n",
+    "        persons.stream().forEach(p -> System.out.println(p.getName()));\n",
+    "    }\n",
+    "    \n",
+    "    \n",
+    "}\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
