added spring boot notes

--- a/Java - Spring Boot/10. Pagination of two tables and sorting results.ipynb
+++ b/Java - Spring Boot/10. Pagination of two tables and sorting results.ipynb
@@ -87,6 +87,11 @@
    "outputs": [],
    "source": [
     "public List<Post> getPostsWithComments(int page) {\n",
+    "    \n",
+    "    # 1. Get all posts from required page\n",
+    "    # 2. Make a list of all ids from the list of all posts\n",
+    "    # 3. Make a list of all comments fin\n",
+    "    \n",
     "    # getting list of all posts\n",
     "    List<Post> allPosts = postRespository.findAllPosts(PageRequest.of(page, PAGE_SIZE));\n",
     "    # getting list of all posts ids\n",
