added spring boot notes

--- a/Java - Spring Boot/10. Pagination of two tables and sorting results.ipynb
+++ b/Java - Spring Boot/10. Pagination of two tables and sorting results.ipynb
@@ -90,7 +90,8 @@
     "    \n",
     "    # 1. Get all posts from required page\n",
     "    # 2. Make a list of all ids from the list of all posts\n",
-    "    # 3. Make a list of all comments fin\n",
+    "    # 3. Make a list of all comments found by id from the ids list.\n",
+    "    # 4. Set comment to the corresponding Post.\n",
     "    \n",
     "    # getting list of all posts\n",
     "    List<Post> allPosts = postRespository.findAllPosts(PageRequest.of(page, PAGE_SIZE));\n",
