added spring boot notes

--- a/Java - Spring Boot/09. Passing query parameters to application.ipynb
+++ b/Java - Spring Boot/09. Passing query parameters to application.ipynb
@@ -22,9 +22,9 @@
     "\n",
     "public final static PAGE_SIZE = 20;\n",
     "\n",
-    "public List<Post> getPosts(int page) {\n",
+    "public List<Post> getPosts(Integer page) {\n",
     "    # we want to be sure it's always a positive number, if negative number is passed, set page to 0\n",
-    "    int pageNumber = page >= 0 ? page : 0; \n",
+    "    int pageNumber = page!= null && page >= 0 ? page : 0; \n",
     "    return postRepository.findAllPosts(PageRequest.of(pageNumber, PAGE_SIZE))\n",
     "    \n",
     "}"
