updated Spring Boot notes

--- a/Java - Spring Boot/05. Creating REST API.ipynb
+++ b/Java - Spring Boot/05. Creating REST API.ipynb
@@ -77,7 +77,7 @@
    "id": "ada23a27",
    "metadata": {},
    "source": [
-    "Tworzymy nowy pakiet z interfejsem ../repository.PostRepository"
+    "Tworzymy nowy pakiet z interfejsem ../repository.PostRepository (w katalogu ../src/main/java/appFolder/.."
    ]
   },
   {
