added React notes

--- a/React/14. React router.ipynb
+++ b/React/14. React router.ipynb
@@ -204,6 +204,69 @@
   },
   {
    "cell_type": "markdown",
+   "id": "de728af8",
+   "metadata": {},
+   "source": [
+    "#### Przekazywanie wartości do Outletu przy pomocy useOutletContext\n",
+    "\n",
+    "Do outletu możemy przekazywać różne wartości (tak jak propsy do komponentów). W tym celu wykorzystujemy useOutletContext."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a783ad70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Layout.js\n",
+    "import React from 'react';\n",
+    "import { Outlet } from 'react-router-dom';  ## must import Outlet that will represent all other children Routes\n",
+    "import Navbar from './Navbar' ## assume we have some navbar component\n",
+    "\n",
+    "export default function Layout() {\n",
+    "    \n",
+    "  const [data, setData] = useState({someExampleObj})\n",
+    "\n",
+    "  return (\n",
+    "    <div>\n",
+    "      <Navbar /> ## navbar will be always displayed\n",
+    "      <Outlet context={[someExampleObj]} /> ## children routes nested in layout.\n",
+    "    </div>\n",
+    "  )\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e37a5226",
+   "metadata": {},
+   "source": [
+    "W komponencie, który jest częścią tego Outletu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e05a5d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import React from 'react'\n",
+    "import { useOutletContext } from 'react-router-dom'\n",
+    "\n",
+    "export default function SomeOutletComponent() {\n",
+    "\n",
+    "  const [data] = useOutletContext() \n",
+    "\n",
+    "  return (\n",
+    "    <div>Price: ${data.price}</div>\n",
+    "  )\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3bd8e7a3",
    "metadata": {},
    "source": [
@@ -282,7 +345,8 @@
     "            # we have to add below parameter (default it's end={true}) to inform react-router to end the matching route \n",
     "            # here. For example we have an url /host/about - without the \"end\" it will apply style to this NavLink\n",
     "            # because it's matching /host, and also will apply the style to \"about\" NavLink.\n",
-    "            end   \n",
+    "            end # <--- it changes logic of active NavLinks, example: /host and /host/about will match path of \"to\" \n",
+    "                # of this NavLink, with added prop \"end\" host/about will not be active, only this NavLink\n",
     "          <NavLink \n",
     "            className={({isActive}) => isActive ? 'navbar__link--active' : 'link'}\n",
     "            to=\"/about\">About</NavLink>\n",
@@ -299,6 +363,41 @@
     "  )\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "655e8a6e",
+   "metadata": {},
+   "source": [
+    "#### Tworzenie przycisku cofającego do poprzedniej ścieżki\n",
+    "\n",
+    "Moglibyśmy skorzystać z navigate, ale navigate cofa o pewną wartość do poprzedniego renderowanego widoku, a nie do poprzedniego endpointu ścieżki url."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8275ca6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<Link \n",
+    "    # go back to \"parent\" url path. For example parent route is /host but we are at the url /host/:id/pricing.\n",
+    "    # if we click on link it will go back to /host -> not to /host/:id as we want to.\n",
+    "    to=\"..\"    \n",
+    "    # to make it work, it's required to use realtive parameter with a value \"path\"\n",
+    "    relative='path' # if we want to go back no to parent but to a relative route, \n",
+    "    ><IoIosArrowRoundBack />&nbsp;Back to all vans\n",
+    "</Link>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0dc71d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
