added React notes

--- a/Java - Spring Boot - JPA notes/06. One to One relationship.ipynb
+++ b/Java - Spring Boot - JPA notes/06. One to One relationship.ipynb
@@ -221,6 +221,101 @@
     "    private CourseMaterial courseMaterial;\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fe65ee5",
+   "metadata": {},
+   "source": [
+    "### Doświadczenie podczas tworzenia full-stackowej aplikacji.\n",
+    "\n",
+    "Podczas tworzenia testowej bazy danych przy użyciu H2 stworzyłem schema.sql oraz data.sql. Miałem dwie tabele w relacji jeden do jednego - Jeden użytkownik może mieć tylko jeden wpis z tabeli Settings. Podczas tworzenia nowego użytkownika tworzymy nowy wpis w Setting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e33fb4d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class AppUserService {\n",
+    "\n",
+    "    @Autowired\n",
+    "    private AppUserRepository appUserRepository;\n",
+    "\n",
+    "    @Autowired\n",
+    "    private SettingRepository settingRepository;\n",
+    "\n",
+    "    @Autowired\n",
+    "    private SettingService settingService;\n",
+    "\n",
+    "    public List<AppUser> getAllAppUsers() {\n",
+    "        return appUserRepository.findAll();\n",
+    "    }\n",
+    "\n",
+    "    public AppUser addNewUser(AppUser newAppUser) { # pass new AppUser body from controller (@RequestBody...)\n",
+    "        Setting setting = new Setting();  # create new Setting entry\n",
+    "        setting.setAppUser(newAppUser);  # new setting entry requires to set newly created AppUser\n",
+    "        newAppUser.setSetting(setting);  # new user entry requires to set newly created Setting\n",
+    "        settingService.addSetting(setting);;    # saving new setting entry \n",
+    "        appUserRepository.save(newAppUser);     # saving new user entry\n",
+    "        return newAppUser;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3c3d1e6",
+   "metadata": {},
+   "source": [
+    "Pojawił się również problem kiedy chciałem używałem metody GET aby podejrzeć wpisy Setting. Wyświetlały się ale bez \"joinowanej\" kolumny app_user_id. Okazało się, że muszę dodać kolumnę w encji Setting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e816770",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@Entity\n",
+    "@Data\n",
+    "@Setter\n",
+    "@Getter\n",
+    "@Builder\n",
+    "@AllArgsConstructor\n",
+    "@NoArgsConstructor\n",
+    "public class Setting {\n",
+    "\n",
+    "    @Id\n",
+    "    @GeneratedValue(\n",
+    "            strategy = GenerationType.IDENTITY\n",
+    "    )\n",
+    "    private Long settingId;\n",
+    "    @Column(name = \"app_user_id\", insertable = false, updatable = false) # this is the column I had to add. \n",
+    "    private Long appUserId;\n",
+    "    @OneToOne(cascade = CascadeType.ALL)\n",
+    "    @JoinColumn(name = \"app_user_id\", referencedColumnName = \"appUserId\")\n",
+    "    @JsonIgnore\n",
+    "    @JsonProperty\n",
+    "    private AppUser appUser;\n",
+    "    @ManyToOne\n",
+    "    @JoinColumn(name = \"theme_id\")\n",
+    "    private Theme theme;\n",
+    "}\n",
+    "\n",
+    "### result is:\n",
+    "{\n",
+    "    \"settingId\": 2,\n",
+    "    \"appUserId\": 3, #  it show the appUserId from joined column from AppUserEntity \n",
+    "    \"theme\": {\n",
+    "        \"themeId\": 1,\n",
+    "        \"name\": \"light\"\n",
+    "}\n",
+    "###"
+   ]
   }
  ],
  "metadata": {
