--- a/TypeScript/10. Generics.ipynb
+++ b/TypeScript/10. Generics.ipynb
@@ -121,10 +121,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "91fa70d7",
+   "metadata": {},
+   "source": [
+    "Możemy przyjąć więcej niż jeden generyczny typ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "00f91c85",
    "metadata": {},
    "source": [
     "Zastosowanie generycznych typów dla klas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ba01351",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function re"
    ]
   },
   {
