new TypeScript notes

--- a/TypeScript/10. Generics.ipynb
+++ b/TypeScript/10. Generics.ipynb
@@ -121,10 +121,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91fa70d7",
+   "id": "07df5564",
    "metadata": {},
    "source": [
     "Możemy przyjąć więcej niż jeden generyczny typ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64a8fbc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function reversePair<T, U>(param1: T, param2: U) : [U, T] {\n",
+    "    return [param2, param1];\n",
+    "}"
    ]
   },
   {
@@ -133,16 +145,6 @@
    "metadata": {},
    "source": [
     "Zastosowanie generycznych typów dla klas."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ba01351",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "function re"
    ]
   },
   {
