--- a/Firebase/Firebase basics.ipynb
+++ b/Firebase/Firebase basics.ipynb
@@ -23,8 +23,19 @@
     "## pojawi się instrukcja implementacji WAŻNE: jeżeli firebaseConfig nie posiada \"databaseURL: ...\" to znaczy, że nie mamy \n",
     "## zainicjowane realtime database (wróć do 3 linijki)\n",
     "\n",
-    "## ostatania linijki z implementacji to:\n",
+    "## instalujemy firebase w projekcie\n",
+    "npm install firebase\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0df75ba0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## importujemy dodatkowo (oprócz tego co jest w instrukcji implementacji)\n",
     "import { getDatabase, ref, push} from 'firebase/database'\n",
     "\n",
@@ -36,7 +47,7 @@
     "## wówczas jeżeli mamy tak skonfigurowaną bazę to możemy np po kliknięciu dodać nowy rekord\n",
     "function handleClick() {\n",
     "    push(itemsInDB, formData)  # formData to np wartość z pola input.\n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -69,7 +80,17 @@
     "## aby sprawdzić czy są jakieś wpisy można użyć funkcji\n",
     "if (snapshot.exists() {\n",
     "    # do something\n",
-    "})"
+    "})\n",
+    "\n",
+    "# w projekcie React np. w custom hook\n",
+    "const [fetchedData, setFetchedData] = useState([])\n",
+    "\n",
+    "async function getRecipesData() {\n",
+    "        onValue(recipesInDB, (snapshot) => {\n",
+    "            const data = snapshot.val();\n",
+    "            setFechtedData(data)\n",
+    "        })\n",
+    "    }"
    ]
   },
   {
