new next.js notes

--- a/Next.js/04. Link.ipynb
+++ b/Next.js/04. Link.ipynb
@@ -40,12 +40,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3148ee96",
+   "metadata": {},
+   "source": [
+    "We can create a subcomponent with links and use this component in Navbar component.\n",
+    "Create a folder Links in Navbar folder, then create a component file Links.tsx"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9192d037",
+   "id": "a532c0b5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Links.tsx\n",
+    "import React from \"react\";\n",
+    "import Link from \"next/link\";\n",
+    "\n",
+    "type LinkObject = {\n",
+    "    title: string;\n",
+    "    path: string;\n",
+    "}\n",
+    "\n",
+    "const Links = () => {\n",
+    "\n",
+    "  const links = [\n",
+    "    {\n",
+    "      title: \"Homepage\",\n",
+    "      path: \"/\",\n",
+    "    },\n",
+    "    {\n",
+    "      title: \"About\",\n",
+    "      path: \"/about\",\n",
+    "    },\n",
+    "    {\n",
+    "      title: \"Contact\",\n",
+    "      path: \"/contact\",\n",
+    "    },\n",
+    "    {\n",
+    "      title: \"Blog\",\n",
+    "      path: \"/blog\",\n",
+    "    },\n",
+    "  ];\n",
+    "\n",
+    "  return (\n",
+    "    <div>\n",
+    "      {links.map((link: LinkObject) => {  # map through the links and return Link component \n",
+    "        return (\n",
+    "          <Link href={link.path} key={link.title + link.path}>{link.title}</Link>\n",
+    "        )\n",
+    "      })\n",
+    "      }\n",
+    "    </div>\n",
+    "  )\n",
+    "}\n",
+    "\n",
+    "export default Links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e575164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Navbar.tsx\n",
+    "import Links from \"./links/Links\"\n",
+    "\n",
+    "const Navbar = () => {\n",
+    "  return (\n",
+    "    <div>\n",
+    "      <div>Logo</div>\n",
+    "      <div>\n",
+    "        <Links />\n",
+    "      </div>\n",
+    "    </div>\n",
+    "  )\n",
+    "}\n",
+    "\n",
+    "export default Navbar"
+   ]
   }
  ],
  "metadata": {
