new next.js notes

--- a/Next.js/06. Images.ipynb
+++ b/Next.js/06. Images.ipynb
@@ -69,7 +69,7 @@
    "id": "2956f936",
    "metadata": {},
    "source": [
-    "#### Important: DIV must have property \"position: absolute\" !!!!!!!!!"
+    "#### Important: DIV must have property \"position\" set to inherit, absolut or relative!!!!!!!!!"
    ]
   },
   {
